# courseera_gpu_specilization_capstone_project

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: kernels.h  main.cu  sobel_edge_detection.cu
